--- a/index.html
+++ b/index.html
@@ -57,15 +57,14 @@
   <main>
     <section class="hero">
       <h1 class="hero__title">soluciones eficaces para su negocio</h1>
-      <button class="hero__button-primary" type="button" id="data-modal-open">
-        solicite nuestro servicio</button>
+      <button class="hero__button-primary" type="button" id="data-modal-open">solicite nuestro servicio</button>
     </section>
 
     <!-- Feature section  -->
-    <section class="section">
+    <section class="pt">
       <div class="container">
         <h2 class="visually-hidden">Nuestras Ventajas</h2>
-        <ul class="features list">
+        <ul class="features ">
 
           <li class="feature-list__item">
             <div class="feature-list__icon">
@@ -123,7 +122,7 @@
       </div>
     </section>
     <!-- What we do section  -->
-    <section class="section">
+    <section class=" pt pb">
       <div class="container">
         <h2 class="subtitle">A que nos dedicamos</h2>
         <!-- images  -->
@@ -146,7 +145,7 @@
       </div>
     </section>
 
-    <section class="team section">
+    <section class="team pb">
       <div class="container">
         <h2 class="subtitle">Nuestro equipo</h2>
         <ul class="team-members">
@@ -313,7 +312,7 @@
       </div>
     </section>
     <!-- Clientes Reulares  -->
-    <section class="section">
+    <section class="pt pb">
       <div class="container">
         <h2 class="subtitle">Clientes Regulares</h2>
         <ul class="clients-list">
