--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
   </header>
   <main>
     <!-- Filters and PortFolio -->
-    <section class="section filter">
+    <section class="pt filter">
       <div class="container">
         <h2 hidden>Portafolio</h2>
         <!-- Menu tabs  -->
