--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
           <li class="clients-list__item">
             <a href="" class="clients-list__links">
               <svg width="106" height="60" class="clients-list__icon">
-                <use href="./images/icons.svg#Company2"></use>
+                <use href="./images/icons.svg#group"></use>
               </svg>
           </li>
           </a>
@@ -373,8 +373,8 @@
       <div>
         <a class="logo" href="">WebStudio</a>
         <address class="address">
-          <a class="address" href="https://goo.gl/maps/dBykvgHUBU18GHkaA" target="_blank">Calz.Ticomán 500, Ciudad de
-            México</a>
+          <a class="address" href="https://goo.gl/maps/dBykvgHUBU18GHkaA" target="_blank">Calz. Ticomán 500, Ciudad de
+            México, CDMX, México</a>
         </address>
         <ul class="contact">
           <li class="contact__item">
