--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
   </header>
   <main>
     <!-- Filters and PortFolio -->
-    <section class="pt filter">
+    <section class="pt pb filter">
       <div class="container">
         <h2 hidden>Portafolio</h2>
         <!-- Menu tabs  -->
@@ -82,7 +82,7 @@
           <li class="portfolio-list__item">
             <a href="#" class="portfolio__link">
               <div class="portfolio-list__thumb">
-                <img src="images/Portafolio1.jpg" width="340" alt="TecnoCrack website" />
+                <img src="images/Portafolio1.jpg" width="360" alt="TecnoCrack website" />
                 <div class="portfolio-list__effect">
                   <p class="portfolio-list__text">
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -100,7 +100,7 @@
           <li class="portfolio-list__item">
             <a href="#" class="portfolio__link">
               <div class="portfolio-list__thumb">
-                <img src="images/Portafolio2.jpg" width="340" alt="Poster New Orlean vs Golden Star" />
+                <img src="images/Portafolio2.jpg" width="360" alt="Poster New Orlean vs Golden Star" />
                 <div class="portfolio-list__effect">
                   <p class="portfolio-list__text">
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -120,7 +120,7 @@
           <li class="portfolio-list__item">
             <a href="#" class="portfolio__link">
               <div class="portfolio-list__thumb">
-                <img src="images/Portafolio3.jpg" width="340" alt="Seafood Restaurant App" />
+                <img src="images/Portafolio3.jpg" width="360" alt="Seafood Restaurant App" />
                 <div class="portfolio-list__effect">
                   <p class="portfolio-list__text">
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -138,7 +138,7 @@
           <li class="portfolio-list__item">
             <a href="#" class="portfolio__link">
               <div class="portfolio-list__thumb">
-                <img src="images/Portafolio4.jpg" width="340" alt="Project Prime Marketing" />
+                <img src="images/Portafolio4.jpg" width="360" alt="Project Prime Marketing" />
                 <div class="portfolio-list__effect">
                   <p class="portfolio-list__text">
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -156,7 +156,7 @@
           <li class="portfolio-list__item">
             <a href="#" class="portfolio__link">
               <div class="portfolio-list__thumb">
-                <img src="images/Portafolio5.jpg" width="340" alt="Project Boxes App" />
+                <img src="images/Portafolio5.jpg" width="360" alt="Project Boxes App" />
                 <div class="portfolio-list__effect">
                   <p class="portfolio-list__text">
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -174,7 +174,7 @@
           <li class="portfolio-list__item">
             <a href="#" class="portfolio__link">
               <div class="portfolio-list__thumb">
-                <img src="images/Portafolio6.jpg" width="340" alt="Inspiration has no Borders" />
+                <img src="images/Portafolio6.jpg" width="360" alt="Inspiration has no Borders" />
                 <div class="portfolio-list__effect">
                   <p class="portfolio-list__text">
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -192,7 +192,7 @@
           <li class="portfolio-list__item">
             <a href=" #" class="portfolio__link">
               <div class="portfolio-list__thumb">
-                <img src="images/Portafolio7.jpg" width="340" alt="Limited Edition Design" />
+                <img src="images/Portafolio7.jpg" width="360" alt="Limited Edition Design" />
                 <div class="portfolio-list__effect">
                   <p class="portfolio-list__text">
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -210,7 +210,7 @@
           <li class="portfolio-list__item">
             <a href="#" class="portfolio__link">
               <div class="portfolio-list__thumb">
-                <img src="images/Portafolio8.jpg" width="340" alt="Project LAB MArketin" />
+                <img src="images/Portafolio8.jpg" width="360" alt="Project LAB MArketin" />
                 <div class="portfolio-list__effect">
                   <p class="portfolio-list__text">
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -228,7 +228,7 @@
           <li class="portfolio-list__item">
             <a href="#" class="portfolio__link">
               <div class="portfolio-list__thumb">
-                <img src="images/Portafolio19.jpg" width="340" alt="Growing Bussines App" />
+                <img src="images/Portafolio19.jpg" width="360" alt="Growing Bussines App" />
                 <div class="portfolio-list__effect">
                   <p class="portfolio-list__text">
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit.
