--- a/index.html
+++ b/index.html
@@ -485,8 +485,8 @@
       </form>
     </div>
   </div>
-  <script src="./js/modal.js">
-  </script>
+  <script src="./js/modal.js"></script>
+  <script src="js/menu-mobile.js"></script>
 </body>
 
 </html>
